tests/sumo/basic/tls/errors/no_phases/errors.sumo
Error: TLS program '2' for TLS '0' has a duration of 0.
Quitting (on error).
